FOPO added classical music

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Pomofocus Clone Application"
+      content="Focus with Pomodoro"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -18,7 +18,7 @@
 />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Pomofocus Clone</title>
+    <title>FOPO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
