--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>FOPO</title>
+    <title>Focus With Pomodoro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
